<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="software_version">0.1.0</string>

    <string name="app_name">Android Noise</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_server_connect">Android Noise</string>
    <string name="connect_to_server">Connecting to The Noise Music System</string>
    <string name="title_activity_artist_list">Artists</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_artist">Artist</string>
    <string name="title_activity_album">Album</string>
    <string name="play_button_text">Play</string>
    <string name="title_activity_shell">Android Noise</string>
    <string name="title_server_section">Servers</string>
    <string name="title_library_section">Library</string>
    <string name="title_favorites_section">Favorites</string>
    <string name="title_queue_section">Now Playing</string>
    <string name="title_search_section">Search</string>
    <string name="title_recent_section">Recent</string>
    <string name="title_history_section">Play History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_results_title">Search Results</string>
    <string name="search_button_title">Search</string>
    <string name="noise_al_artist_list">Artists</string>
    <string name="noise_al_album_list">Albums</string>
    <string name="noise_tl_track_list">Tracks</string>
    <string name="noise_ql_queue_list">Now Playing</string>
    <string name="noise_sr_search_list">Search Results</string>
    <string name="noise_fl_favorites_list">Favorites</string>
    <string name="play_history_list">Play History</string>
    <string name="noise_al_server_list">Available Noise Systems</string>
    <string name="sl_searching_title">Searching for Noise Systems…</string>
    <string name="ql_empty_list">Play Something!</string>
    <string name="sl_empty_list">Try searching for that forgotten song!</string>
    <string name="sl_no_results">Nothing was found.</string>
    <string name="search_text_hint">Type something to search for…</string>
    <string name="album_count_title">Albums:</string>
    <string name="ali_track_count_title">Tracks:</string>
    <string name="ali_published_title">Published:</string>
    <string name="tli_track_separator">-</string>
    <string name="published_year_various">Various</string>
    <string name="artist_button_more">more…</string>
    <string name="list_header_band_members">Band Members:</string>
    <string name="list_header_similar_artists">Similar Artists:</string>
    <string name="list_header_top_albums">Top Albums:</string>
    <string name="list_header_top_tracks">Top Tracks:</string>
    <string name="al_artist_filter_hint">Enter artist filter text</string>
    <string name="al_artist_filter_header">Artist Filter:</string>
    <string name="al_album_filter_hint">Enter album filter text</string>
    <string name="at_track_filter_hint">Enter track filter text</string>
    <string name="al_album_filter_header">Album Filter:</string>
    <string name="at_track_filter_header">Track Filter:</string>
    <string name="rpl_recently_played_title">Recently Played</string>
    <string name="rvl_recently_viewed_title">Recently Viewed</string>
    <string name="tr_total_time_format">Playing Time: %1$d:%2$02d:%3$02d</string>
    <string name="tr_remaining_time_format">Remaining Time: %1$d:%2$02d:%3$02d</string>
    <string name="artist_count_format">%1$d artists</string>
    <string name="album_count_format">%1$d albums</string>
    <string name="track_count_format">%1$d tracks</string>
    <string name="software_version_format">Version: %1$s</string>
    <string name="track_number_format">Track: %1$d</string>
    <string name="volume_name_format">- %1$s</string>
    <string name="track_queued_toast_format">Track \'%1$s\' was queued!</string>
    <string name="track_list_queued_toast_format">\'%1$d tracks were queued!</string>
    <string name="track_list_queued_fail_toast_format">An error occurred while queueing hte track list.</string>
    <string name="album_queued_toast_format">Album \'%1$s\' was queued!</string>
    <string name="track_queued_fail_toast_format">An error occurred while queueing track \'%1$s\'</string>
    <string name="album_queued_fail_toast_format">An error occurred while queueing album \'%1$s\'</string>
    <string name="sli_title_format">%1$s - %2$s</string>
    <string name="sli_subtitle_format">(%1$s at %2$s)</string>
    <string name="published_year_format">Published: %1$s</string>
    <string name="atl_multiple_albums">(available on multiple albums - tap to display)</string>
    <string name="artist_tracks_albums_subtitle">is contained on the following albums:</string>
    <string name="playback_now_playing">Now Playing: %1$s</string>
    <string name="playback_paused">Paused: %1$s</string>
    <string name="playback_audio_volume_title">Volume</string>
    <string name="soft_keyboard_search">Search</string>
    <string name="swipe_to_remove_track">Swipe to remove track</string>
    <string name="artist_album_format">(%1$s/%2$s)</string>
    <string name="library_manage_active_library">The currently active library is:</string>
    <string name="library_manage_sync_library">Update Library</string>
    <string name="library_manage_edit_library">Edit Library</string>
    <string name="library_manage_create_library">Create Library</string>
    <string name="library_edit_library_name">Library Name:</string>
    <string name="library_edit_library_name_hint">enter a name for the library</string>
    <string name="library_edit_database_name">Database Name:</string>
    <string name="library_edit_database_name_hint">enter a name for the database</string>
    <string name="library_edit_media_location">Music Location:</string>
    <string name="library_edit_media_location_hint">enter the location for your music, i.e: C:\\My Music</string>
    <string name="library_edit_save">Save Changes</string>

    <string name="transport_play">Play</string>
    <string name="transport_stop">Stop</string>
    <string name="transport_pause">Pause</string>
    <string name="transport_previous_track">Previous</string>
    <string name="transport_next_track">Next</string>
    <string name="transport_repeat">Repeat</string>

    <string name="content_description_artist_image">The band/artist image</string>
    <string name="content_description_album_cover">The album cover image</string>
    <string name="content_description_artist_type">This entry describes an artist</string>
    <string name="content_description_album_type">This entry describes an album</string>
    <string name="content_description_track_type">This entry describes a track</string>
    <string name="content_description_artist_list">The list of artists in the library</string>
    <string name="content_description_album_list">The list of albums for an artist</string>
    <string name="content_description_track_list">The list of tracks for an album</string>
    <string name="content_description_favorites_list">The list of favorite items</string>
    <string name="content_description_history_list">The list of previously played tracks</string>
    <string name="content_description_queue_list">The list of items now playing</string>
    <string name="content_description_recently_played_list">The list of recently played artists</string>
    <string name="content_description_recently_viewed_list">The list of recently viewed artists</string>
    <string name="content_description_search_list">The list of search results</string>
    <string name="content_description_server_list">The list of available Noise servers</string>
    <string name="content_description_now_playing">This item is currently playing</string>
    <string name="content_description_toast_item_queued">An item was added to the play queue</string>

    <string name="setting_use_last_server">use_last_server</string>
    <string name="setting_use_last_server_title">Automatically Select Last Server</string>
    <string name="setting_use_last_server_summary">Automatically select the last Noise server used if it is available on startup</string>
    <string name="setting_last_server_used">last_server_used</string>

    <string name="setting_prefix_artist_names">prefix_artist_names</string>
    <string name="setting_prefix_artist_names_title">Sort Artist List Without Prefixes</string>
    <string name="setting_prefix_artist_names_summary">Sort the artist list without common name prefixes (such as \'The\' )</string>

    <string name="setting_playback_countdown">use_playback_countdown</string>
    <string name="setting_playback_countdown_title">Display playback time remaining</string>
    <string name="setting_playback_countdown_summary">Display time remaining instead of the position for the currently playing track</string>

    <string name="action_play_album">Play Album</string>
    <string name="action_filter_artist_list">Filter Artists</string>
    <string name="action_filter_artist_list_on">Filter Artists (On)</string>
    <string name="action_filter_album_list">Filter Albums</string>
    <string name="action_filter_track_list">Filter Tracks</string>
    <string name="action_filter_album_list_on">Filter Albums (On)</string>
    <string name="action_filter_track_list_on">Filter Tracks (On)</string>
    <string name="action_queue_start_play">Start Playing</string>
    <string name="action_queue_clear">Clear All</string>
    <string name="action_queue_clear_played">Clear Played</string>
    <string name="action_queue_item_remove">Remove this track</string>
    <string name="action_queue_item_play_next">Continue play with this track</string>
    <string name="action_queue_item_replay">Replay this track</string>
    <string name="action_artist_detail_albums">List Albums</string>
    <string name="action_artist_detail_tracks">List Tracks</string>
    <string name="action_play_random_search">Play Random</string>
    <string name="action_play_artist_top_tracks">Play Top Tracks</string>
    <string name="action_refresh_server_list">Refresh</string>

    <string name="menu_title_queue_list_item">Select an action for the queued item:</string>

    <string name="test_software_version">Version: 1.2.3</string>
    <string name="test_artist_name">The Rolling Stones</string>
    <string name="test_album_name">Sticky Fingers</string>
    <string name="test_track_name">Beast Of Burden</string>
    <string name="test_artist_album_name">(The Rolling Stones/Sticky Fingers)</string>
    <string name="test_artist_count_titled">53 artists</string>
    <string name="test_album_count">17</string>
    <string name="test_album_count_titled">37 albums</string>
    <string name="test_track_count">15</string>
    <string name="test_genre">classic rock</string>
    <string name="test_published_year">1997</string>
    <string name="test_duration">1:32</string>
    <string name="test_track_number">12</string>
    <string name="test_volume_name">- Disc 1</string>
    <string name="test_website">www.google.com</string>
    <string name="test_playing_time">Playing Time: 1:23:45</string>
    <string name="test_remaining_time">Remaining Time: 0:56:23</string>
    <string name="test_server_name">H8-BSwanson</string>
    <string name="test_server_address">(192.168.1.123)</string>
    <string name="test_track_queued">The track \'Beast Of Burden\' was queued!</string>
</resources>
