<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Options">

        <CheckBoxPreference
            android:key="@string/setting_use_last_server"
            android:title="@string/setting_use_last_server_title"
            android:summary="@string/setting_use_last_server_summary"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="@string/setting_prefix_artist_names"
            android:title="@string/setting_prefix_artist_names_title"
            android:summary="@string/setting_prefix_artist_names_summary"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="@string/setting_playback_countdown"
            android:title="@string/setting_playback_countdown_title"
            android:summary="@string/setting_playback_countdown_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>