<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".AlbumActivity$PlaceholderFragment"
                android:orientation="vertical">

    <com.SecretSquirrel.AndroidNoise.views.AutoFitTextView
        android:id="@+id/ai_artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/noise_base_padding"
        android:layout_marginRight="@dimen/noise_base_padding"
        android:layout_marginTop="@dimen/noise_base_padding"
        android:text="@string/test_artist_name"
        style="@style/TitleText"/>

    <LinearLayout
        android:id="@+id/ai_divider"
        android:layout_height="3dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="@dimen/noise_base_padding"
        android:layout_marginRight="@dimen/noise_base_padding"
        android:layout_marginBottom="1dp"
        android:layout_below="@+id/ai_artist_name"
        android:weightSum="3">

        <View
            android:layout_height="3dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:background="@drawable/divider_split_gradient_horizontal"
            />
    </LinearLayout>

    <com.SecretSquirrel.AndroidNoise.views.AutoFitTextView
        android:id="@+id/ai_album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ai_divider"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/noise_base_padding"
        android:layout_marginRight="@dimen/noise_base_padding"
        android:text="@string/test_album_name"
        style="@style/TitleText"
        />

    <ImageView
        android:id="@+id/ai_album_cover_image"
        android:layout_width="@dimen/noise_image_maximum_width"
        android:layout_height="@dimen/noise_image_minimum_height"
        android:scaleType="fitCenter"
        android:layout_margin="@dimen/noise_base_padding"
        android:adjustViewBounds="true"
        android:layout_below="@+id/ai_album_name"
        android:contentDescription="@string/content_description_album_cover"/>

    <TextView
        android:id="@+id/ai_published_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ali_published_title"
        android:layout_below="@+id/ai_album_cover_image"
        android:layout_marginLeft="@dimen/noise_base_padding"
        style="@style/SubHeaderText"/>
    <View
        android:id="@+id/ai_published_spacer"
        android:layout_height="1dp"
        android:layout_width="@dimen/noise_text_spacer"
        android:layout_toRightOf="@+id/ai_published_header"
        android:layout_below="@+id/ai_album_cover_image"
        />
    <TextView
        android:id="@+id/ai_published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_published_year"
        android:layout_below="@+id/ai_album_cover_image"
        android:layout_toRightOf="@+id/ai_published_spacer"
        style="@style/SubTitleText"/>

    <TextView
        android:id="@+id/ai_track_count_header"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/ai_published_header"
        android:layout_marginLeft="@dimen/noise_base_padding"
        android:text="@string/ali_track_count_title"
        style="@style/SubHeaderText"/>
    <View
        android:id="@+id/ai_track_spacer"
        android:layout_height="1dp"
        android:layout_width="@dimen/noise_text_spacer"
        android:layout_toRightOf="@+id/ai_track_count_header"
        android:layout_below="@+id/ai_published_header"
        />
    <TextView
        android:id="@+id/ai_track_count"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/ai_track_spacer"
        android:layout_below="@+id/ai_published"
        android:text="@string/test_track_count"
        style="@style/SubTitleText"/>
</RelativeLayout>
