<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.SecretSquirrel.AndroidNoise.views.AutoFitTextView
        android:id="@+id/aei_artist_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/noise_base_padding"
        android:layout_marginTop="@dimen/noise_base_padding"
        android:text="@string/test_artist_name"
        style="@style/TitleText"/>

    <LinearLayout
        android:id="@+id/aei_divider"
        android:layout_height="3dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="@dimen/noise_base_padding"
        android:layout_marginRight="@dimen/noise_base_padding"
        android:layout_marginBottom="1dp"
        android:layout_below="@+id/aei_artist_name"
        android:weightSum="5">

        <View
            android:layout_height="3dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:background="@drawable/divider_split_gradient_horizontal"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/aei_artist_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aei_divider"
        android:layout_marginLeft="@dimen/noise_base_padding"
        android:text="@string/test_genre"
        style="@style/SubTitleText"/>

    <TextView
        android:id="@+id/aei_artist_website"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@id/aei_artist_genre"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/noise_base_padding"
        android:autoLink="web"
        android:text="@string/test_website"
        />

    <ImageView
        android:id="@+id/aei_artist_image"
        android:layout_width="@dimen/noise_image_maximum_width"
        android:layout_height="@dimen/noise_image_minimum_height"
        android:scaleType="fitCenter"
        android:layout_margin="@dimen/noise_base_padding"
        android:adjustViewBounds="true"
        android:layout_below="@+id/aei_artist_genre"
        android:contentDescription="@string/content_description_artist_image"/>

    <WebView
        android:id="@+id/aei_biography"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/aei_artist_image"
        android:layout_above="@+id/aei_list_headers"
        android:layout_margin="@dimen/noise_base_padding"
        android:autoLink="web"/>

    <LinearLayout
        android:id="@+id/aei_list_block"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/noise_base_padding"
        android:layout_marginLeft="@dimen/noise_base_padding"
        android:baselineAligned="false"
        >

        <ListView
            android:id="@+id/aei_band_members"
            android:layout_height="@dimen/noise_simple_list_height"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/SimpleListStyle"/>

        <ListView
            android:id="@+id/aei_similar_artists"
            android:layout_height="@dimen/noise_simple_list_height"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/SimpleListStyle"/>

        <ListView
            android:id="@+id/aei_top_albums"
            android:layout_height="@dimen/noise_simple_list_height"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/SimpleListStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aei_list_headers"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/aei_list_block"
        android:layout_marginLeft="@dimen/noise_base_padding"
        android:layout_marginRight="@dimen/noise_base_padding"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/list_header_band_members"
            style="@style/SimpleListHeaderStyle"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/list_header_similar_artists"
            style="@style/SimpleListHeaderStyle"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/list_header_top_albums"
            style="@style/SimpleListHeaderStyle"/>
    </LinearLayout>
</RelativeLayout>