<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="@dimen/noise_list_item_height"
              android:layout_marginTop="@dimen/noise_base_padding"
              android:layout_marginBottom="@dimen/noise_base_padding"
              android:paddingBottom="@dimen/noise_base_padding">

    <Button
        android:id="@+id/play_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginRight="@dimen/noise_base_padding"
        android:layout_gravity="center_vertical"
        style="@style/PlayButtonStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="horizontal">

            <com.SecretSquirrel.AndroidNoise.views.AutoFitTextView
                android:id="@+id/ati_album_name"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:text="@string/test_album_name"
                style="@style/TitleText"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ati_track_number"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minWidth="20dp"
                android:layout_marginLeft="@dimen/noise_base_padding"
                android:gravity="right"
                android:layout_centerVertical="true"
                android:text="@string/test_track_number"
                style="@style/SubTitleText"/>

            <TextView
                android:id="@+id/ati_volume_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ati_track_number"
                android:layout_marginLeft="@dimen/noise_text_spacer"
                android:text="@string/test_volume_name"
                android:layout_centerVertical="true"
                style="@style/SubTitleText"/>

            <TextView
                android:id="@+id/ati_duration"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minWidth="50dp"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/noise_base_padding"
                android:layout_centerVertical="true"
                android:text="@string/test_duration"
                style="@style/SubTitleText"/>

            <TextView
                android:id="@+id/ati_published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/ati_duration"
                android:layout_marginRight="@dimen/noise_base_padding"
                android:layout_centerVertical="true"
                android:text="@string/test_published_year"
                style="@style/SubTitleText"/>

            </RelativeLayout>

    </LinearLayout>
</LinearLayout>