<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_height="0dp"
            android:layout_width="2dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="@dimen/noise_base_padding"
            android:layout_marginBottom="@dimen/noise_base_padding"
            style="@style/separatorViewVertical"/>

        <com.SecretSquirrel.AndroidNoise.views.VerticalTextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/noise_tl_track_list"
            android:gravity="bottom"
            style="@style/HeaderText"
            />

        <View
            android:layout_height="0dp"
            android:layout_width="2dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="@dimen/noise_base_padding"
            android:layout_marginBottom="@dimen/noise_base_padding"
            android:scaleY="-1"
            style="@style/separatorViewVertical"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/track_background"
            android:contentDescription="@string/content_description_track_list"/>

        <ListView
            android:id="@+id/at_track_list"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            style="@style/ShortListStyle"/>

        <RelativeLayout
            android:id="@+id/at_filter_panel"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:background="@color/control_panel">

            <TextView
                android:id="@+id/at_filter_header"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/control_panel_text"
                android:layout_alignBaseline="@+id/at_track_filter"
                android:layout_marginLeft="@dimen/noise_base_padding"
                android:text="@string/at_track_filter_header"
                />

            <com.SecretSquirrel.AndroidNoise.views.ButtonEditText
                android:id="@+id/at_track_filter"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/at_track_filter_hint"
                android:layout_toRightOf="@+id/at_filter_header"
                android:layout_toLeftOf="@+id/at_list_count"
                android:layout_marginLeft="@dimen/noise_base_padding"
                android:drawableRight="@android:drawable/ic_menu_close_clear_cancel"
                android:textColor="@color/control_panel_text"
                />

            <TextView
                android:id="@+id/at_list_count"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/noise_base_padding"
                android:layout_marginRight="@dimen/noise_base_padding"
                android:textColor="@color/control_panel_text"
                android:layout_alignBaseline="@+id/at_track_filter"
                android:text="@string/test_album_count_titled"
                />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>